--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/per-nilsson/garage-door-service",
   "dependencies": {
     "bunyan": "^1.5.1",
+    "config": "^1.17.1",
     "express": "^4.13.1",
     "serialport": "^2.0.5",
     "socket.io": "^1.3.6"
